[package]
name = "f7c440b000e8966f43245dc0a81af05e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
glium = "0.32.1"
nalgebra-glm = "0.18.0"
russimp = { version = "2.0.2", features = ["prebuilt"] }
